# MediaGallery

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.autosave  README.md  README.md.autosave  gitignore  main.cpp  qml.qrc
qml/: ApplicationShell.qml  BookmarkEditDialog.qml  CategoryNode.qml  ColorPicker.qml  FilterBar.qml  FullscreenStub.qml  FullscreenViewer.qml  GalleryStub.qml  GalleryView.qml  HtmlSurface.qml  ImageViewer.qml  MediaOverlay.qml  MediaTile.qml  MetadataDateEditor.qml  PdfSurface.qml  SettingsBookmarksTab.qml  SettingsCategoriesTab.qml  SettingsCategoryNode.qml  SettingsConverterTab.qml  SettingsDesignTab.qml  SettingsDialog.qml  SettingsEditorTab.qml  SettingsGeneralTab.qml  SettingsGroup.qml  SettingsTagsTab.qml  SettingsViewTab.qml  TagBar.qml  TagCategoryPanel.qml  TextSurface.qml  TileSizeDialog.qml  VideoSurface.qml
src/: AppController.cpp  AppController.h  AppSettings.cpp  AppSettings.h  ColorPickerButton.cpp  ColorPickerButton.h  FilterBar.cpp  FilterBar.h  FolderService.cpp  FolderService.h  FullscreenView.cpp  FullscreenView.h  GalleryView.cpp  GalleryView.h  ISettings.h  Icons.h  ImageViewerWindow.cpp  ImageViewerWindow.h  JsonStorage.cpp  JsonStorage.h  MainWindow.cpp  MainWindow.h  ManualZonePreview.cpp  ManualZonePreview.h  MediaItem.cpp  MediaItem.h  MediaModel.cpp  MediaModel.h  MediaOverlayWidget.cpp  MediaOverlayWidget.h  MediaProxyModel.cpp  MediaProxyModel.h  MediaThumbnail.cpp  MediaThumbnail.h  MetadataEditor.cpp  MetadataEditor.h  PathUtils.h  PdfAudioController.cpp  PdfAudioController.h  PdfMediaHandler.cpp  (+35 more)
translations/: mediagallery_de.ts  mediagallery_en.ts
